popup; fixed alignment error

--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,11 @@ body {
   .heading-secondary:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .heading-secondary--popup {
+    margin-left: 0rem; }
 
 .heading-tertiary {
+  color: #000;
   font-size: 1.6rem;
   font-weight: 700;
   text-transform: uppercase; }
@@ -478,10 +481,31 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 75vh;
+    height: 60vh;
     width: 75vw;
     background-color: #fff;
-    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.3); }
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
+    display: table;
+    overflow: hidden; }
+  .popup__left {
+    width: 33.333333%;
+    display: table-cell; }
+  .popup__right {
+    width: 66.6666667%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 3rem 5rem; }
+  .popup__img {
+    display: block;
+    width: 100%; }
+  .popup__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    color: #000;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid #eee; }
 
 .header {
   height: 95vh;
