--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -66,9 +66,13 @@ body {
     text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
   }
 
+  &--popup {
+    margin-left: 0rem;
+  }
 }
 
 .heading-tertiary {
+  color: $color-black;
   font-size: $default-font-size;
   font-weight: 700;
   text-transform: uppercase;
