--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -8,25 +8,44 @@
     z-index: 8888;
     &__content {
         @include centerAbsolutely;
-        height: 50rem;
+        height: 60vh;
         width: 75vw;
         background-color: $color-white;
         box-shadow: 0 2rem 4rem rgba($color-black, .3);
         border-radius: 3px;
+        display: table;
+        overflow: hidden;
     }
 
-    $__left {
-        width: 33.3333%;
-        float: left;
+    &__left {
+        width: 33.333333%;
+        display: table-cell;
+    }
+    
+    &__right {
+        width: 66.6666667%;
+        display: table-cell;
+        vertical-align: middle;
+        padding: 3rem 5rem;
     }
 
-    $__right {
-        width: 66.6666%
-        float: left;
-    }
-    $__img {
+    &__img {
         display: block;
         width: 100%;
     }
-    $__text {}
+
+    &__text {
+        font-size: 1.4rem;
+        margin-bottom: 4rem;
+        color: $color-black;
+        column-count: 2;
+        column-gap: 2rem;
+        column-rule: 1px solid $color-grey-light-2;
+
+        -moz-hyphens: auto;
+        -ms-hyphens: auto;
+        -webkit-hyphens: auto;
+        hyphens: auto;
+    }
+
 }
